--- a/src/set-full-name.css
+++ b/src/set-full-name.css
@@ -10,76 +10,14 @@ ul {
     padding: 0;
 }
 
-.ms-welcome__header {
-   padding: 16px;
-   display: -webkit-flex;
-   display: flex;
-   -webkit-flex-direction: column;
-   flex-direction: column;
-   align-items: center;
-   min-height: 80px;
-   word-break: break-all;
-}
-
-.ms-welcome__header .ms-fontSize-su {
-    font-size: 24px;
-}
-
-.ms-welcome__main {
-   display: -webkit-flex;
-   display: flex;
-   -webkit-flex-direction: column;
-   flex-direction: column;
-   -webkit-flex-wrap: nowrap;
-   flex-wrap: nowrap;
-   -webkit-align-items: center;
-   align-items: center;
-   -webkit-flex: 1 0 0;
-   flex: 1 0 0;
-   padding: 10px 20px;
-}
-
-.ms-welcome__main > h2 {
-    width: 100%;
-    text-align: center;
-}
-
-.ms-welcome__features {
-    list-style-type: none;
-    margin-top: 20px;
-}
-
-.ms-welcome__features.ms-List .ms-ListItem {
-    padding-bottom: 20px;
-    display: -webkit-flex;
-    display: flex;
-}
-
-.ms-welcome__features.ms-List .ms-ListItem > .ms-Icon {
-    margin-right: 10px;
-}
-
-.ms-welcome__action.ms-Button--hero {
-    margin-top: 30px;
-}
-
-.ms-Button.ms-Button--hero .ms-Button-label {
- color: #0078d7;
-}
-
-.ms-Button.ms-Button--hero:hover .ms-Button-label,
-.ms-Button.ms-Button--hero:focus .ms-Button-label{
- color: #005a9e;
- cursor: pointer;
-}
-
 form {
-display: flex;
-flex-direction: column;
-justify-content: space-between;
-align-items: center;
-width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
 }
+
 form > div {
     width: 100%;
 }
@@ -106,10 +44,45 @@ form button {
     color: white;
     font-weight: 600;
     text-transform: uppercase;
-    border-radius: 4px;
     border: transparent;
+    border-radius: 2px;
 }
 
 form button:hover {
-opacity: 0.8;
+    opacity: 0.8;
 }
+
+form button:disabled {
+    background-color: grey;
+    opacity: 0.3;
+}
+
+.ms-welcome__header {
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-direction: column;
+    flex-direction: column;
+    align-items: center;
+    min-height: 80px;
+    padding: 16px;
+    word-break: break-all;
+}
+
+.ms-welcome__header .ms-fontSize-su {
+    font-size: 24px;
+}
+
+.ms-welcome__main {
+   display: -webkit-flex;
+   display: flex;
+   -webkit-flex-direction: column;
+   flex-direction: column;
+   -webkit-flex-wrap: nowrap;
+   flex-wrap: nowrap;
+   -webkit-align-items: center;
+   align-items: center;
+   -webkit-flex: 1 0 0;
+   flex: 1 0 0;
+   padding: 10px 20px;
+}
+
